public/stylesheets/style.css
form.signup,
form.login {
  margin-top: 50px;
}

hr{
  color: #fff;
  width: 70%;
}

.welcome-container{
  padding-top: 2rem!important;
}
/* <<<<<<< venus */
h1{
  font-family: 'Cormorant Garamond', serif;
}

.link{
  display: inline-flex;
  padding-left: 0%!important;
}

.log{
  max-width: max-content;
  padding-left: 0%!important;
}

.alert{
  font-weight: bolder;
  color: red;
  text-align: center;
  max-width: max-content;
  font-size: 1.2rem;
  padding-top:.4rem;
}
.alert2{
  font-weight: bolder;
  color: red;
  text-align: center;
  max-width: max-content;
  font-size: 1.2rem;
  margin-top: .5rem!important;
  margin-left: 1rem;
}
.alert3{
  font-weight: bolder;
  color:green;
  text-align: center;
  max-width: max-content;
  font-size: 1.7rem;
  margin-top: .5rem!important;
  margin-left: 1rem;
}

body {
  background: url('https://a0.muscache.com/im/pictures/de26f95b-fc03-4918-9df9-e3be5593adc8.jpg?im_w=1680') no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  -o-background-size: cover;
}

#traveler{
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

.about{
  color:white;
}

a{
  font-size: 150%;
  color:white;
}

.footer-copyright{
  font-size: 150%;
  color:white;
}

.page-footer{
  margin-top: 5rem!important;
  margin-bottom: 1rem!important;
}

.navigation{
  text-align: center!important;
  align-items: center!important;
  justify-content: center!important;
  display: inline-flex;
}
/* stylelint-disable selector-list-comma-newline-after */

.blog-header {
  line-height: 1;
  border-bottom: 1px solid #e5e5e5;
}

h1, h2, h3, h4, h5, h6, nav.navbar {
  font-family: "Playfair Display", Georgia, "Times New Roman", serif;
  padding-bottom: 20px;
}

/* MEMBER LANDING PAGE */

.jumbotron {
  margin-top: 50px;
  opacity: 0.8;
}
.card {
  background-color: white;
  color: inherit;
  opacity: 0.8;
  padding: 25px;
}

i {
  padding-right: 10px;
}

a.member {
  padding: 20px;
  font-size: 15px;
  min-width: 200px;
  max-width: 200px;
  font-size: 1rem;
}

.tours-activities{
  background-color: gray!important;
}

.welcomeMessage{
  height: max-content;
  padding: 2rem 1rem 2rem 2rem!important;
  margin: auto 0!important;
}

.selectionContainer{
  width: max-content!important;
  height: max-content!important;
  padding: 0rem 1.5rem!important;
  margin: 0 0 auto 0;
}

.travelLocation{
  font-style: italic;
}

.cityOptions{
  height: 2rem!important;
  margin: auto 0;
}

.submitBtn{
  height: 2rem!important;
  margin: auto 0 auto .1rem;
  background-color: #007bff;
  color: #fff;
}

/* Explore Page  */

h1.explore {
  font-size: 4rem;
}

div.explore {
    background-color: white;
    color: inherit;
    opacity: 0.8;
    padding: 25px;
    margin-bottom: 50px;
  }

img.nps, img.air {
  max-width: 150px;
  max-height: 150px;
}

a.explore {
  color: inherit;
  font-size: inherit;
}

/* COMMUNITY BLOG  */
.my-blog{
  padding: 35px 35px;
}
.blog-btn{
  background-color: rgba(255, 164, 91,1);
  color: white;
  border: none;
  border-radius: 50px;
  cursor: pointer;
  transition: all 0.3s ease 0s;
}
.blog-btn:hover{
  background-color: rgba(255, 164, 91, 0.6);
}
.my-span {
  padding: 9px 25px;
  background-color: rgba(255, 164, 91,1);
  color: white;
  border: none;
  border-radius: 50px;
  cursor: pointer;
  transition: all 0.3s ease 0s;
  margin-left: 5px;
}
.my-span:hover {
  background-color: rgba(255, 164, 91, 0.8);
}


/* calendar */

#calendar{
  margin: 0;
  padding:0;
  box-sizing: border-box;
}

#calendar{
  width: 100%;
  height: 100%;
  color:black;
  font-weight: 800%;
  justify-content: center;
  align-items: center;
}

.calendar{
  width: 45rem;
  height: 52rem;

}

.month{
  width: 100%;
  height: 12rem;
  display:flex;
  justify-content: space-between;
  align-items: center;
  padding:0 2rem;
  text-align: center;
}

.month i{
  font-size: 2.5rem;
  cursor: pointer;
}

.month h5{
font-size: 3rem;
font-weight: 400;
text-transform: uppercase;
letter-spacing: 0.2rem;
margin-bottom: 1rem;
}
.month p{
  font-size: 1.6rem;

}

.weekdays{
  width: 100%;
  height:5rem;
  padding:0.04rem;
  display:flex;
  align-items: center;
}

.weekdays div{
  font-size: 1.5rem;
  font-weight: 400;
  letter-spacing: 0.1rem;
  width: calc(44.2rem/7);
  display:flex;
  justify-content: center;
  align-items: center;

}

.days{
  width: 100%;
  display:flex;
  flex-wrap: wrap;
  padding: 0.2rem;
}

.days div{
  font-size: 1.4rem;
  margin: 0.3rem;
  width: calc(40.2rem/7);
  height: 5rem;
  display:flex;
  justify-content: center;
  align-items: center;
}

.prev-date,
.next-date{
opacity: 0.5;
}

.today{
  background-color: lightgray;
}

.days div:hover:not(.today){
  background-color: #e5e5e5;
  border:0.2rem solid white;
  cursor: pointer;

}

.date-container{
  border-bottom: black solid .1rem;
  border-top:  black solid .1rem;
  max-width: max-content;
  justify-content: center;
  text-align: center;
  max-height: max-content;
  font-size: 1.5rem!important;
  padding-top: 1rem;
  margin-bottom: 1rem;
}

.date:hover{
  color: #007bff;
  transition: .4s;
}

.date p{
  padding-top: 0rem;
}

.calendar-container{
  max-width: max-content;
  padding: 1rem;
}
.calendar-image-container{
  max-width: max-content;
  padding: 1rem;
}

.blog-container{
  justify-content: center!important;
  text-align: center!important;
}


.flights{
  width: max-content!important;
  padding: 1rem!important;
  margin: auto 0 1rem;
}

.screen{
  margin: 0 auto!important;
}

